vlib/v/checker/tests/addr_of_invalid_expr.out
vlib/v/checker/tests/addr_of_invalid_expr.vv:3:9: error: unexpected `&`, expecting expression
    1 | fn main() {
    2 |     a := 1
    3 |     _ := &(&a)
      |            ^
    4 | }
